# calendar

./: .dockerignore  .gitignore  .gitlab-ci.yml  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  __init__.py  backend_scrapers_template.md  docker-compose.prod.yml  docker-compose.yml  koyeb.yaml  package.json  pyproject.toml
backend/: __init__.py  calendar_control.py  main.py  onefc_calendar.py  ufc_calendar.py  wsgi.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/onefc/: route.ts
frontend/src/app/api/status/: route.ts
frontend/src/app/api/ufc/: route.ts
frontend/src/app/fnc/: page.tsx
frontend/src/app/ksw/: page.tsx
frontend/src/app/onefc/: page.tsx
frontend/src/app/status/: page.tsx
frontend/src/app/ufc/: page.tsx
frontend/src/components/: sports-sidebar.tsx  status-dashboard.tsx
frontend/src/components/ui/: background.tsx  button.tsx  card.tsx  fnc-logo.tsx  ksf-logo.tsx  onefc-logo.tsx  status-card.tsx  ufc-logo.tsx
frontend/src/lib/: sports-config.ts
mmacalendar/: __init__.py  calendar_control.py  main.py  onefc_calendar.py  ufc_calendar.py
mmacalendar/templates/: home.html
onechampcalendar/: Requirements.txt  __init__.py  calendar_control.py  calendar_event.py  main.py  run.sh
onechampcalendar/templates/: home.html
tests/: conftest.py  test_calendar_control.py  test_flask.py
