[tool.poetry]
name = "onechampcalendar"
version = "0.1.1"
description = "Scraping the One Championship events to a calendar you can subscribe to!"
authors = ["Richard <richardwebdesigner@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
pytz = "^2022.1"
ics = "^0.7"
Flask = "^2.1.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-watch = "^4.2.0"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
