[project]
name = "mmacalendar"
version = "0.1.1"
description = "Scraping MMA events to calendars you can subscribe to!"
authors = [
    {name = "Marko Andrić", email = "marko.andric@example.com"}
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
pytz = "^2022.1"
ics = "^0.7"
Flask = "^2.1.1"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-watch>=4.2.0",
]
